hphp/hack/test/typecheck/immutable_binding/immutable_catch_scope_2.php.exp
File "immutable_catch_scope_2.php", line 14, characters 8-8:
Unbound name: e (a global constant) (Naming[2049])
